opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jenga-rules"
bug-reports: "https://github.com/janestreet/jenga-rules/issues"
dev-repo: "https://github.com/janestreet/jenga-rules.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "jenga-rules" "--root" "." "-j" jobs]
]
depends: [
  "jbuilder"
  "jenga"
  "parsexp"
  "ppx_driver"
  "ppx_jane"
  "re"         {>= "1.5.0"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Jane Street jengaroot

This package contains the Jane Street jengaroot as well as a script to
build a self-contained jenga archive.
"
