opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jenga-rules"
bug-reports: "https://github.com/janestreet/jenga-rules/issues"
dev-repo: "git+https://github.com/janestreet/jenga-rules.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jenga"
  "parsexp"
  "ppx_driver"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "re"                      {>= "1.5.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Jane Street jengaroot

This package contains the Jane Street jengaroot as well as a script to
build a self-contained jenga archive.
"
